pkg/configurator/templates/ansible/roles/kubernetes/security-policies/files/srv/kubernetes/manifests/network/backend-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: kube-system
  name: backend-policy
spec:
  podSelector:
    matchLabels:
      role: backend
  ingress:
      - from:
        - podSelector:
            matchLabels:
              role: frontend
