pkg/configurator/templates/ansible/roles/kubernetes/security-policies/files/srv/kubernetes/manifests/network/default-deny.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: kube-system
spec:
  podSelector: {}
