pkg/configurator/templates/ansible/roles/kubernetes/security-policies/files/srv/kubernetes/manifests/network/dns-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: dns-policy
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: kube-dns
  ingress:
  - {}
